--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: hacksbynight.org
-description: An infosec blog
+title: datascibri.com
+description: My Blog about Data Science and AI
 github_username: flizzer
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "hacksbynight.org"
+github_repo: "datascibri.com"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
@@ -34,7 +34,7 @@ url: "https://flizzer.github.io" # the base hostname & protocol for your site, e
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/hacksbynight.org" # the subpath of your site, e.g. "/blog".
+baseurl: "/datascibri.com" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
