--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: datascibri.com
-description: My Blog about Data Science and AI
+description: A Blog about Data Science and AI
 github_username: flizzer
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "datascibri.com"
